bad/mul_invalid_types_bool_void.example_compiler_output
ERROR
[1mbad/mul_invalid_types_bool_void.lat:5:8: [1;31merror: [0;1mmultiplication is defined only for int values, not `boolean` and `void`[m
	false * foo();
	      [1;32m^[m
